Fixed how-it-works link appearing behind action bar in iOS Safari

--- a/public/stylesheets/invitefriends.css
+++ b/public/stylesheets/invitefriends.css
@@ -84,12 +84,6 @@
 .button-container button {
     width: 70%;
 }
-
-.how-it-works-container {
-    position: absolute;
-    width: 100%;
-    bottom: 30px;
-}
 .how-it-works-container .how-it-works-link {
     font-size: 27px;
 }
